force-app/main/default/objects/JBCXM__GSFileLink__c/JBCXM__GSFileLink__c.object-meta.xml
<CustomObject>
    <description>This object stores links to files related Gainsight modules</description>
    <label>GSFileLink</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GSFileLinks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>