force-app/main/default/objects/JBCXM__GSFileLink__c/fields/JBCXM__Account__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>GS File Link</relationshipLabel>
    <relationshipName>GSFileLink</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>