force-app/main/default/objects/JBCXM__GSFileLink__c/fields/JBCXM__CTA__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__CTA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Call To Action</label>
    <referenceTo>JBCXM__CTA__c</referenceTo>
    <relationshipLabel>File Link</relationshipLabel>
    <relationshipName>FileLink</relationshipName>
    <type>Lookup</type>
</CustomField>