force-app/main/default/objects/JBCXM__GSFileLink__c/fields/JBCXM__URL__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__URL__c</fullName>
    <description>URL for the file</description>
    <formula>HYPERLINK( &quot;/&quot; &amp; JBCXM__DocumentID__c ,JBCXM__FileName__c)</formula>
    <label>URL</label>
    <type>Text</type>
</CustomField>